# frudo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  invoice_test.py  main.py  pyproject.toml  test_pydocs.py
.devcontainer/: Dockerfile  devcontainer.json
configs/: base.yaml
docs/: add_new_document_type.md  Добавить новый тип документа.md
frudo/data_generator/: __init__.py  base_data_generator.py  full_name.py
frudo/document_data_generator/: base_document_data_generator.py  snils.py
frudo/document_generator/: __init__.py  snils.py
src/: pipeline.py  task.py
src/augmentation/: __init__.py  base.py
src/augmentations/: __init__.py  base_augmentation.py  basic_augmentation.py
src/data/: __init__.py
src/data_generator/: __init__.py  base_data_generator.py  calculate_bbox_tins.py  dataclasses.py  date.py  date_vyd_passp.py  full_name.py  full_name_from_file.py  gender.py  geo_place.py  geo_place_from_file.py  invoice.py  passport_number.py  podr_number.py  rand_number.py  snils_number.py  start_coords_tins.py  tins_number.py
src/document/: __init__.py  base.py  snils.py
src/document_data_generator/: __init__.py  base_document_data_generator.py  certificate_of_no_criminal_record_generator.py  dataclasses.py  invoice.py  passport_data_generator.py  snils.py  tins_new.py  tins_old.py
src/document_generator/: __init__.py  base_document_generator.py  interest_free_loan_agreement.py  invoice.py  multipage_document_generator.py  new_tins.py  old_tins.py  passport_document_from_image.py  passport_document_generator.py  passport_from_images.py  snils.py
src/documentation/: src.augmentations.base_augmentation.rst  src.augmentations.basic_augmentation.rst  src.augmentations.rst  src.data_generator.base_data_generator.rst  src.data_generator.calculate_bbox_tins.rst  src.data_generator.dataclasses.rst  src.data_generator.date.rst  src.data_generator.date_vyd_passp.rst  src.data_generator.full_name.rst  src.data_generator.full_name_from_file.rst  src.data_generator.gender.rst  src.data_generator.geo_place.rst  src.data_generator.geo_place_from_file.rst  src.data_generator.invoice.rst  src.data_generator.passport_number.rst  src.data_generator.podr_number.rst  (+26 more)
templates/: README.md
(+36 files in other folders)
